--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -11,7 +11,7 @@
                     <div class="alert alert-primary mx-auto" role="alert">
                         <h3>Important Note</h3>
                             <ul>
-                            After you pay the nominal registration fee of Rs. 400, you may participate in any number of events.
+                                The registration fee for the events is Rs. 400 per participant. After paying this nominal fee, one can participate in any no. of events.
                             </ul>
                             <br>
                         <h3>Event Registration Process</h3>
