--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -39,27 +39,13 @@
                     <div class="row h-100 align-items-center">
                         <!-- Welcome Text -->
                         <div class="col-12">
-                            <video autoplay muted loop>
-                                <source src="../../static/main_page/img/bg-img/Advitiya_theme.mp4" type="video/mp4">
-                            </video>
-                            <!-- <div class="welcome-text-two text-center">
-                                <h5 data-animation="fadeInUp" data-delay="100ms">The event consistently</h5>
-                                <h2 data-animation="fadeInUp" data-delay="300ms">OSHA Compliance</h2>
-                                
-                                <div class="event-meta" data-animation="fadeInUp" data-delay="500ms">
-                                    <a class="event-date" href="#">
-                                        <i class="zmdi zmdi-account"></i> January 14, 2019</a>
-                                    <a class="event-author" href="#">
-                                        <i class="zmdi zmdi-alarm-check"></i> Laura Green</a>
-                                </div>-->
-                            <!-- <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
-                                    <a href="#" class="btn confer-btn m-2">View more <i
-                                            class="zmdi zmdi-long-arrow-right"></i>
-                                    </a>
-                                    <a href="#" class="btn confer-btn m-2">Get Tickets <i
-                                            class="zmdi zmdi-long-arrow-right"></i>
-                                    </a>
-                                </div> -->
+                                <div class="welcome-text text-right">
+                                    <!-- <h2 data-animation="fadeInUp" data-delay="300ms">Science <br>Conference</h2>
+                              <h6 data-animation="fadeInUp" data-delay="500ms">Shangri-La Hotel, Bangkok, Bangkok, Thailand</h6>-->
+                                    <div class="hero-btn-group" data-animation="fadeInUp" data-delay="700ms">
+                                        <!-- <a href="{% url 'ca:home' %}" class="btn confer-btn">More Information <i class="zmdi zmdi-long-arrow-right"></i></a> -->
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
