--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -55,8 +55,9 @@
             </div>
         </div>
         {% for category, event_list in events.items %}
+        <br>
         <h2 id="{{ category }}" style="text-transform: uppercase;">{{category}}</h2>
-        <div class="row">
+        <div class="row events">
             {% for event in event_list %}
 
             <!-- Single Blog Area -->
