fix profile events participated

--- a/main_page/templates/main_page/profile.html
+++ b/main_page/templates/main_page/profile.html
@@ -63,8 +63,10 @@
                                                     <ul>
                                                         {% if EVENTS_PARTICIPATED %}
                                                             {% for event in EVENTS_PARTICIPATED %}
-                                                                <h4 style="color: white;"><li>{{event.event.name}}</li></h4>
+                                                                <li><h4 style="color: white;">{{event.event.name}}</h4></li>
                                                             {% endfor %}
+                                                        {% else %}
+                                                            <h4 style="color: white;">You have not participated in any event yet.</h4>
                                                         {% endif %}
                                                     </ul>
                                                 </div>
