--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -62,7 +62,7 @@
         <section class="about-us-countdown-area section-padding-50-0" id="about">
             <center>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'main_page:events'%}" class="btn btn-primary">Register For Events!!!</a>
+                    <a href="{% url 'main_page:events'%}" class="btn btn-primary">Register For Events</a>
                 {% else %}
                     <a href="{% provider_login_url 'google' %}?next={% url 'main_page:events'%}" class="btn btn-primary">Register For Events!!!</a>
                 {% endif %}
