--- a/TSP/templates/TSP/index.html
+++ b/TSP/templates/TSP/index.html
@@ -20,14 +20,18 @@
         <div class="col-md-6">
             <h2 class="mb-4"><strong>About Advitiya</strong></h2>
             <p style="text-align:justify; font-size:1.3em">
-                IIT Ropar is organizing the fourth edition of it's annual Technical Festival "Advitiya" in the first
-                week of of February consisting of 72 hours of intense competitions and technical events. Advitiya has
-                already evolved into a brand within four years of its inception and a publicity paradise that ensures
-                stupendous brand visibility for sponsors. With an array of activities that consolidate the vision for
-                times to come, Advitiya 2020 is ready to set the scientific spirits soaring and technological temper
-                ablaze. Advitiya will witness a wide range of scientific and technical activities and novel events from
-                fields like Coding, Robotics, Finance, Design and Entrepreneurship with total prizes worth as high as 8
-                lakh Rupees.
+                IIT Ropar is
+                                organizing the fourth edition of it's annual Science & Technology Festival "Advitiya" in the first
+                                week of of February consisting of 72 hours of intense competitions and technical events.
+                                Advitiya has already evolved into a brand within four years of its inception. 
+                                Advitiya achieved more than 15k footfall and conducted 30+ events in its previous edition. 
+                                Advitiya, in its past few editions, not only has created a buzz in the minds of Techno-enthusiasts 
+                                but has also provided its partners and sponsors a platform for their publicity. 
+                                With an array of activities that consolidate the vision for
+                                times to come, Advitiya 2020 is ready to set the scientific spirits soaring and
+                                technological temper ablaze. Advitiya will witness a wide range of scientific and technical activities, 
+                                and novel events from fields like Coding, Aeromodelling, Robotics, Finance, Design and Entrepreneurship 
+                                with total prizes worth as high as 9 lakh Rupees.
             </p>
 
         </div>
