Fest dates code commented

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -18,6 +18,38 @@
                 style="background-image: url(static/main_page/img/bg-img/coming_soon.jpg);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
+                        <!-- <div class= "col-12" style="padding-top: 400px;">
+                            <div class="row-6"></div>
+                            <div class="row-6">
+                                <center>
+                                    <div data-toggle="modal" data-target="#Modal16" style="display: inline-block;">
+                                        <a style="text-decoration: none;">
+                                            <time datetime="2018-03-16" class="icon">
+                                            <strong>February</strong>
+                                            <span> 7th </span>
+                                            </time>&nbsp;
+                                        </a>
+                                    </div>
+                                    <div data-toggle="modal" data-target="#Modal16" style="display: inline-block;">
+                                        <a style="text-decoration: none;">
+                                            <time datetime="2018-03-16" class="icon">
+                                            <strong>February</strong>
+                                            <span> 8th </span>
+                                            </time>&nbsp;
+                                        </a>
+                                    </div>
+                                    <div data-toggle="modal" data-target="#Modal16" style="display: inline-block;">
+                                            <a style="text-decoration: none;">
+                                                <time datetime="2018-03-16" class="icon">
+                                                <strong>February</strong>
+                                                <span> 9th </span>
+                                                </time>&nbsp;
+                                            </a>
+                                    </div>
+                                    <br><br>
+                                </center>
+                            </div>
+                        </div> -->
                         <!-- Welcome Text -->
                         <div class="col-12">
                             <div class="welcome-text text-right">
@@ -54,7 +86,7 @@
         </div>
 
         <!-- Scroll Icon -->
-        <!-- <div class="icon-scroll" id="scrollDown"></div> 
+        <!-- <div class="icon-scroll" id="scrollDown"></div>  -->
     </section>
     <!-- Welcome Area End -->
 
