--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -57,6 +57,7 @@
                                 <li><a href="{% url 'TSP:home' %}">TSP</a></li>
 
                                 <li><a href="{% url 'ca:home' %}">Campus Ambassador</a></li>
+                                <li><a href="{% url 'main_page:sponsors'%}">Sponsors</a></li>
                                 {% if user.is_authenticated %}
                                 <li><a href="#"><i class="fas fa-user-circle fa-3x"></i></a>
                                     <ul class="dropdown">
