--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -254,6 +254,15 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <!-- Heading -->
+            <div class="col-12"> 
+                <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
+                    <h4>Accomodation Details</h4>
+                    <a class="btn confer-btn-white" href="{% url 'main_page:accomodation' %}">View Full Details<i class="zmdi zmdi-long-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
 
 
     </div>
@@ -621,7 +630,7 @@
     </div>
     </div>
 </section>
-
+{% comment %}
 <!-- Our Speakings Area Start -->
 <section class="our-sponsor-client-area section-padding-100">
     <div class="container">
@@ -631,11 +640,12 @@
                 <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
                     <p>Partners &amp; Sponsors</p>
                     <h4>PREVIOUS SPONSOR</h4>
+                    <a href="{% url 'main_page:sponsors' %}"> Heelo
                 </div>
             </div>
         </div>
 
-        <div class="row">
+         <div class="row">
             <div class="col-12">
                 <!-- Our Sponsor area -->
                 <div class="our-sponsor-area d-flex flex-wrap">
@@ -697,12 +707,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
 </section>
-
-
-
+{% endcomment %}
 
 <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60"
     style="background-image: url(static/main_page/img/bg-img/3.jpg);">
