--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -255,104 +255,6 @@
 
     </div>
 </section>
-<!-- Our Schedule Area End -->
-
-<section class="our-sponsor-client-area section-padding-100">
-    <div class="container">
-        <div class="row">
-            <!-- Heading -->
-            <div class="col-12">
-                <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
-                    <p>Partners &amp; Sponsors</p>
-                    <h4>PREVIOUS SPONSOR</h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-12">
-                <!-- Our Sponsor area -->
-                <div class="our-sponsor-area d-flex flex-wrap">
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/ncc.jpg' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/tees.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/grab.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/spartan.jpg' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/web.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/jeol.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/sbi.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/hover.jpg' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/nvi.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/ansys.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/ralson.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/safe.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/story.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/punjab.jpg' %}" alt=""></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-
-
-<section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60"
-    style="background-image: url(static/main_page/img/bg-img/3.jpg);">
-    <div class="container">
-        <div class="row">
-            <!-- Heading -->
-            <div class="col-12">
-                <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                    <p>Revealing Soon</p>
-                    <h4>Lecture Series</h4>
-                </div>
-            </div>
-        </div>
-
-
-</section>
 
 <!-- Our Ticket Pricing Table Area Start -->
 <section class="our-ticket-pricing-table-area bg-img bg-gradient-overlay section-padding-100-0 jarallax"
@@ -715,12 +617,12 @@
     </div>
     </div>
 </section>
-{% comment %}
-<!-- Our Speakings Area Start -->
+<!-- 
+
 <section class="our-sponsor-client-area section-padding-100">
     <div class="container">
         <div class="row">
-            <!-- Heading -->
+            
             <div class="col-12">
                 <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
                     <p>Partners &amp; Sponsors</p>
@@ -732,37 +634,37 @@
 
          <div class="row">
             <div class="col-12">
-                <!-- Our Sponsor area -->
+                
                 <div class="our-sponsor-area d-flex flex-wrap">
-                    <!-- Single Sponsor -->
+                
                     <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                         <a href="#"><img src="{% static 'main_page/img/core-img/ncc.jpg' %}" alt=""></a>
                     </div>
-                    <!-- Single Sponsor -->
+                
                     <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                         <a href="#"><img src="{% static 'main_page/img/core-img/tees.png' %}" alt=""></a>
                     </div>
-                    <!-- Single Sponsor -->
+                
                     <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                         <a href="#"><img src="{% static 'main_page/img/core-img/grab.png' %}" alt=""></a>
                     </div>
-                    <!-- Single Sponsor -->
+                    
                     <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                         <a href="#"><img src="{% static 'main_page/img/core-img/spartan.jpg' %}" alt=""></a>
                     </div>
-                    <!-- Single Sponsor -->
+    
                     <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                         <a href="#"><img src="{% static 'main_page/img/core-img/web.png' %}" alt=""></a>
                     </div>
-                    <!-- Single Sponsor -->
+    
                     <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                         <a href="#"><img src="{% static 'main_page/img/core-img/jeol.png' %}" alt=""></a>
                     </div>
-                    <!-- Single Sponsor -->
+                    
                     <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                         <a href="#"><img src="{% static 'main_page/img/core-img/sbi.png' %}" alt=""></a>
                     </div>
-                    <!-- Single Sponsor -->
+                
                     <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                         <a href="#"><img src="{% static 'main_page/img/core-img/hover.jpg' %}" alt=""></a>
                     </div>
@@ -794,8 +696,7 @@
             </div>
         </div> 
     </div>
-</section>
-{% endcomment %}
+</section> -->
 
 <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60"
     style="background-image: url(static/main_page/img/bg-img/3.jpg);">
@@ -809,6 +710,8 @@
                 </div>
             </div>
         </div>
+    </div>
+</section>
 
 
 <!-- Our Speakings Area End -->
