added workshops page

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -707,6 +707,7 @@
                 <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
                     <p>Revealing Soon</p>
                     <h4>Lecture Series</h4>
+                    <a href={% url  'main_page:workshop'  %}>Here</a>
                 </div>
             </div>
         </div>
