--- a/main_page/static/main_page/css/style.css
+++ b/main_page/static/main_page/css/style.css
@@ -1318,7 +1318,7 @@ h3 {
     color: #ffffff; }
 
 /* :: About Single Page CSS */
-/*.single-we-offer-content {
+.single-we-offer-content {
   position: relative;
   z-index: 1;
   -webkit-box-shadow: 0px 8px 27px 0px rgba(90, 111, 120, 0.15);
@@ -1353,7 +1353,7 @@ h3 {
       -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
-      background: #c63fa4;
+      background: #c63fa4; 
       background-image: -moz-linear-gradient(120deg, black 0%, #505add 100%);
       background-image: -webkit-linear-gradient(120deg, black 0%, #505add 100%);
       background-image: -ms-linear-gradient(120deg, black 0%, #505add 100%);
@@ -1381,7 +1381,7 @@ h3 {
     color: #ffffff; }
   .single-we-offer-content:hover .offer-icon::after, .single-we-offer-content:focus .offer-icon::after {
     width: 800%;
-    height: 800%; }*/
+    height: 800%; }
 /*
 .our-gallery-area {
   position: relative;
