Shubhendra Designation Change

--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -480,7 +480,7 @@
                   
                     <div class="speaker-info">
                         <h5>Shubhendra Gautam</h5>
-                        <p>Events Head</p>
+                        <p>Startup Conclave Head</p>
                     </div>
                 </div>
             </div>
