--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -707,7 +707,8 @@
                 <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
                     <p>Revealing Soon</p>
                     <h4>Lecture Series</h4>
-                    <a href={% url  'main_page:workshop'  %}>Here</a>
+                    <h4><a style="color: antiquewhite;" href={% url  'main_page:workshop'  %}> Workshop Page </a></h4>
+                    
                 </div>
             </div>
         </div>
