--- a/main_page/templates/main_page/workshop.html
+++ b/main_page/templates/main_page/workshop.html
@@ -45,7 +45,7 @@
                     </div>
                     <h5>Conference</h5>
                     <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque</p>
-                <a href="" class="btn btn-primary">Register Now!!!</a>
+                <a href="{% url 'main_page:workshop_register'  %}" class="btn btn-primary">Register Now!!!</a>
             
                 </div>
             
@@ -60,7 +60,7 @@
                     </div>
                     <h5>Workshops</h5>
                     <p>Temporibus autem quibusdam et aut officiis debitis aut rerum</p>
-                    <a href="" class="btn btn-primary">Register Now!!!</a>
+                    <a href="{% url 'main_page:workshop_register'  %}" class="btn btn-primary">Register Now!!!</a>
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
                     </div>
                     <h5>Coffee Breaks</h5>
                     <p>On the other hand, we denounce with righteous indignation</p>
-                    <a href="" class="btn btn-primary">Register Now!!!</a>
+                    <a href="{% url 'main_page:workshop_register'  %}" class="btn btn-primary">Register Now!!!</a>
                 </div>
             </div>
 
@@ -86,11 +86,12 @@
                     </div>
                     <h5>Events</h5>
                     <p>These cases are perfectly simple and easy to distinguish in a free hour</p>
-                    <a href="" class="btn btn-primary">Register Now!!!</a>
+                    <a href="{% url 'main_page:workshop_register'  %}" class="btn btn-primary">Register Now!!!</a>
                 </div>
             </div>
         </div>
     </div>
+    
 </section>
 <!-- What We offer Area End -->
 
