--- a/main_page/templates/main_page/index.html
+++ b/main_page/templates/main_page/index.html
@@ -242,15 +242,14 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <!-- Heading -->
+        <!-- <div class="row">
             <div class="col-12"> 
                 <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
                     <h4>Accomodation Details</h4>
                     <a class="btn confer-btn-white" href="{% url 'main_page:accomodation' %}">View Full Details<i class="zmdi zmdi-long-arrow-right"></i></a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
     </div>
@@ -707,8 +706,6 @@
                 <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
                     <p>Revealing Soon</p>
                     <h4>Lecture Series</h4>
-                    <h4><a style="color: antiquewhite;" href={% url  'main_page:workshop'  %}> Workshop Page </a></h4>
-                    
                 </div>
             </div>
         </div>
