--- a/techconnect/templates/techconnect/index.html
+++ b/techconnect/templates/techconnect/index.html
@@ -14,8 +14,8 @@
                 <div class="row h-100 align-items-center">
                     <div class="col-12">
                         <div class="hero-slides-content">
-                            <h4 data-animation="fadeInUp" data-delay="100ms">All the courses you need</h4>
-                            <h2 data-animation="fadeInUp" data-delay="400ms">Wellcome to our <br>Online University</h2>
+                            <!-- <h4 data-animation="fadeInUp" data-delay="100ms">All the courses you need</h4> -->
+                            <h2 data-animation="fadeInUp" data-delay="400ms">TechConnect</h2>
                             <a href="{% url 'techconnect:about' %}" class="btn academy-btn" data-animation="fadeInUp" data-delay="700ms">Read
                                 More</a>
                         </div>
