fix sponsor page

--- a/main_page/templates/main_page/sponsors.html
+++ b/main_page/templates/main_page/sponsors.html
@@ -2,110 +2,85 @@
 {% load static %}
 
 {% block body %}
+
 <section class="our-sponsor-client-area section-padding-100">
-    <div class="container">
-        <div class="row">
-            <!-- Heading -->
-            <div class="col-12">
-                <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
-                    <h1 style="color: black;">Partners &amp; Sponsors</h1>
+        <div class="container">
+            <div class="row">
+                
+                <div class="col-12">
+                    <div class="section-heading-2 text-center wow fadeInUp" data-wow-delay="300ms">
+                        <br>
+                        <p>Partners &amp; Sponsors</p>
+                        <h4>PREVIOUS SPONSOR</h4>
+                    </div>
+                </div>
+            </div>
+    
+             <div class="row">
+                <div class="col-12">
                     
+                    <div class="our-sponsor-area d-flex flex-wrap">
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/ncc.jpg' %}" alt=""></a>
+                        </div>
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/tees.png' %}" alt=""></a>
+                        </div>
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/grab.png' %}" alt=""></a>
+                        </div>
+                        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/spartan.jpg' %}" alt=""></a>
+                        </div>
+        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/web.png' %}" alt=""></a>
+                        </div>
+        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/jeol.png' %}" alt=""></a>
+                        </div>
+                        
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/sbi.png' %}" alt=""></a>
+                        </div>
+                    
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/hover.jpg' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/nvi.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/ansys.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/ralson.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/safe.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/story.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a href="#"><img src="{% static 'main_page/img/core-img/punjab.jpg' %}" alt=""></a>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </div> 
         </div>
-        <center>
-            <h4 style="font-size: 30px; color:white">PREVIOUS SPONSOR</h4>
-        </center>
-        <div class="row">
-            <div class="col-12">
-                <!-- Our Sponsor area -->
-                <!--Heading of the sponsors-->
-                <center>
-                    <h1 style=" padding:10px; color:white;font-weight: 200; ">Name of the sponsors and their types</h1>
-                </center>
-                <div class="our-sponsor-area d-flex flex-wrap">    
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/ncc.jpg' %}" alt=""><h4 style="color: white;">Media partner</h4></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/tees.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/grab.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/spartan.jpg' %}" alt=""></a>
-                    </div>
-                </div>
-                <!--Heading of the sponsors-->
-                <center>
-                    <h1 style=" padding:10px; color:white;font-weight: 200; ">Name of the sponsors and their types</h1>
-                </center>
-                <div class="our-sponsor-area d-flex flex-wrap">   
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/web.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/jeol.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/sbi.png' %}" alt=""></a>
-                    </div>
-                    <!-- Single Sponsor -->
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/hover.jpg' %}" alt=""></a>
-                    </div>
-                </div>
-                <!--Heading of the sponsors-->
-                <center>
-                    <h1 style="padding:10px; color:white;font-weight: 200; ">Name of the sponsors and their types</h1>
-                </center>
-                <div class="our-sponsor-area d-flex flex wrap">    
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/nvi.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/ansys.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/ralson.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/safe.png' %}" alt=""></a>
-                    </div>
-                </div>
-                <!--Heading of the sponsors-->
-                <center>
-                    <h1 style="padding:10px; color:white;font-weight: 200; ">Name of the sponsors and their types</h1>
-                </center>
-                <div class="our-sponsor-area d-flex flex wrap">  
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/chand.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/story.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/dunia.png' %}" alt=""></a>
-                    </div>
-                    <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                        <a href="#"><img src="{% static 'main_page/img/core-img/punjab.jpg' %}" alt=""></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-
+    </section>
 
 
 
